MULE-6657: NIO and WebSocket Completion _ added nio tcp code, merging tests. _ added flag to switch between the original transport or the nio version. This is by muleContext property or system property.
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x-nio@25306 bf997673-6b11-0410-b953-e057580c5b09